work hours form v1

--- a/client/src/app/components/employee/employee.component.html
+++ b/client/src/app/components/employee/employee.component.html
@@ -5,8 +5,9 @@
 <!-- /Form -->
 
 <!-- Table -->
-<div class="table-responsive">
+<div class="table-responsive table-scrollbar">
   <table class="table table-bordered table-sm">
+    
     <!-- <table class="table table-striped"> -->
     <thead class="thead-dark">
       <tr>
