--- a/client/src/app/components/modal/modal.component.html
+++ b/client/src/app/components/modal/modal.component.html
@@ -19,7 +19,7 @@
   <div class="modal-footer d-flex justify-content-between">
     <button type="button" class="btn btn-outline-secondary" (click)="close()">取消</button>
     <button type="button" class="btn btn-outline-dark" (click)="save()"
-      [disabled]="!fbGroup.valid && !fb_Value_Index[0]">確定</button>
+      [disabled]="!fbGroup.valid">確定</button>
   </div>
   <!-- /Footer -->
 </ng-template>
