--- a/client/src/app/components/sidebar/sidebar.component.html
+++ b/client/src/app/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex">
+<div class="d-flex sidebar">
     <ul class="nav px-1">
         <li class="nav-item text-nowrap">
             <a class="nav-link" routerLink="/" title="首頁">
