--- a/client/src/app/components/content-header/content-header.component.html
+++ b/client/src/app/components/content-header/content-header.component.html
@@ -7,7 +7,7 @@
           <button type="button" class="btn btn-outline-secondary btn-sm" (click)="read()"
             [disabled]="!searchText.length && !delayTime">刷新</button>
         </div>
-        <input type="text" class="form-control" maxlength="20" [(ngModel)]="searchText">
+        <input type="text" class="form-control" maxlength="50" [(ngModel)]="searchText">
         <div class="input-group-append">
           <button type="button" class="btn btn-secondary btn-sm" (click)="search()"
             [disabled]="!searchText.length">搜尋</button>
@@ -19,12 +19,12 @@
 
     <ng-container *ngIf="fbGroup != null">
       <div class="col-md-5 col-sm-12 d-flex justify-content-between">
-        <div class="col text-center">
-          <ng-container *ngIf="user.lv > 1">
+        <ng-container *ngIf="user.lv > 1">
+          <div class="col text-center">
             <button type="button" class="btn btn-outline-info btn-sm" (click)="create()">新增</button>
-          </ng-container>
-        </div>
-        <ng-container *ngIf="fb_Value_Index[0]">
+          </div>
+        </ng-container>
+        <ng-container *ngIf="check_Value">
           <div class="col text-center">
             <button type="button" class="btn btn-outline-warning btn-sm" (click)="update()"
               [disabled]="user.lv < 2 || false">更新</button>
