--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,4 +1,10 @@
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap shadow p-0">
-  <strong class="col-md-2 col-lg-2 mr-0 px-3 text-danger">Tailyn</strong>
-  <app-sidebar></app-sidebar>
+  <!-- Logo -->
+  <strong class="text-danger">Tailyn</strong>
+  <!-- Menu Button -->
+  <div class="menu-btn" [class.open]="sideBar_Show" (click)="sideBar_Show = !sideBar_Show">
+    <div class="menu-btn-burger"></div>
+  </div>
+  <!-- SideBar -->
+  <app-sidebar [ngClass]="{'show-sidebar': !sideBar_Show}"></app-sidebar>
 </nav>
